@@ -30,20 +30,19 @@
 #include "zlog.h"
 #include "watchdog.h"
 
-#define ZBX_RECIPIENT struct zbx_recipient_t
-
-ZBX_RECIPIENT
+typedef struct
 {
 	DB_ALERT	alert;
 	DB_MEDIATYPE	mediatype;
-};
+}
+ZBX_RECIPIENT;
 
 #define	ZBX_MAX_RECIPIENTS	32
 
 ZBX_RECIPIENT	recipients[ZBX_MAX_RECIPIENTS];
 
-static	int num = 0;
-static	int lastsent = 0;
+static int	num = 0;
+static int	lastsent = 0;
 
 /******************************************************************************
  *                                                                            *
@@ -60,19 +59,20 @@ static	int lastsent = 0;
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-static void send_alerts()
+static void	send_alerts()
 {
-	int	i,now;
+	int	i, now;
 	char	error[MAX_STRING_LEN];
 
 	now = time(NULL);
 
-	if(now>lastsent+900)
+	if (now > lastsent + 15 * SEC_PER_MIN)
 	{
-		for(i=0;i<num;i++)
+		for (i = 0; i < num; i++)
 		{
-			execute_action(&recipients[i].alert,&recipients[i].mediatype, error, sizeof(error));
+			execute_action(&recipients[i].alert, &recipients[i].mediatype, error, sizeof(error));
 		}
+
 		lastsent = now;
 	}
 }
@@ -92,41 +92,55 @@ static void send_alerts()
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-static void init_config()
+static void	init_config()
 {
+	const char	*__function_name = "init_config";
+
 	DB_RESULT	result;
 	DB_ROW		row;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In init_config()");
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
-	result = DBselect("select mt.mediatypeid, mt.type, mt.description, mt.smtp_server, mt.smtp_helo, mt.smtp_email, mt.exec_path, mt.gsm_modem, mt.username, mt.passwd, m.mediaid,m.userid,m.mediatypeid,m.sendto,m.severity,m.period from media m, users_groups u, config c,media_type mt where m.userid=u.userid and u.usrgrpid=c.alert_usrgrpid and m.mediatypeid=mt.mediatypeid and m.active=%d",
-		MEDIA_STATUS_ACTIVE);
-	while((row=DBfetch(result)))
+	result = DBselect("select mt.mediatypeid,mt.type,mt.description,"
+				"mt.smtp_server,mt.smtp_helo,mt.smtp_email,"
+				"mt.exec_path,mt.gsm_modem,"
+				"mt.username,mt.passwd,m.sendto"
+				" from media m,users_groups u,config c,media_type mt"
+				" where m.userid=u.userid"
+					" and u.usrgrpid=c.alert_usrgrpid"
+					" and m.mediatypeid=mt.mediatypeid"
+					" and m.active=%d",
+				MEDIA_STATUS_ACTIVE);
+
+	while (NULL != (row = DBfetch(result)))
 	{
-		if(num>=ZBX_MAX_RECIPIENTS)	break;
+		if (num >= ZBX_MAX_RECIPIENTS)
+			break;
 
 		memset(&recipients[num].mediatype, 0, sizeof(DB_MEDIATYPE));
 		memset(&recipients[num].alert, 0, sizeof(DB_ALERT));
 
-		ZBX_STR2UINT64(recipients[num].mediatype.mediatypeid,row[0]);
-		recipients[num].mediatype.type=atoi(row[1]);
-		recipients[num].mediatype.description=strdup(row[2]);
-		recipients[num].mediatype.smtp_server=strdup(row[3]);
-		recipients[num].mediatype.smtp_helo=strdup(row[4]);
-		recipients[num].mediatype.smtp_email=strdup(row[5]);
-		recipients[num].mediatype.exec_path=strdup(row[6]);
-		recipients[num].mediatype.gsm_modem=strdup(row[7]);
-		recipients[num].mediatype.username=strdup(row[8]);
-		recipients[num].mediatype.passwd=strdup(row[9]);
+		ZBX_STR2UINT64(recipients[num].mediatype.mediatypeid, row[0]);
+		recipients[num].mediatype.type = atoi(row[1]);
+		recipients[num].mediatype.description = strdup(row[2]);
+		recipients[num].mediatype.smtp_server = strdup(row[3]);
+		recipients[num].mediatype.smtp_helo = strdup(row[4]);
+		recipients[num].mediatype.smtp_email = strdup(row[5]);
+		recipients[num].mediatype.exec_path = strdup(row[6]);
+		recipients[num].mediatype.gsm_modem = strdup(row[7]);
+		recipients[num].mediatype.username = strdup(row[8]);
+		recipients[num].mediatype.passwd = strdup(row[9]);
 
-		recipients[num].alert.sendto=strdup(row[13]);
-		recipients[num].alert.subject=strdup("Zabbix database is down.");
-		recipients[num].alert.message=strdup("Zabbix database is down.");
+		recipients[num].alert.sendto = strdup(row[10]);
+		recipients[num].alert.subject = strdup("Zabbix database is down.");
+		recipients[num].alert.message = strdup("Zabbix database is down.");
 
 		num++;
 	}
 
 	DBfree_result(result);
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
 /******************************************************************************
@@ -144,26 +158,28 @@ static void init_config()
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-static void ping_database()
+static void	ping_database()
 {
-	zabbix_log(LOG_LEVEL_DEBUG, "In ping_database()");
-	/* This is test SQL query, it does nothing */
-	if(DBping() == FAIL)
+	const char	*__function_name = "ping_database";
+
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
+
+	if (FAIL == DBping()) /* check whether a connection to the database can be made */
 	{
 		zabbix_log(LOG_LEVEL_WARNING, "Watchdog: Database is down");
 		send_alerts();
 	}
 	else
-	{
 		zabbix_log(LOG_LEVEL_DEBUG, "Watchdog: Database is up");
-	}
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
 /******************************************************************************
  *                                                                            *
  * Function: main_watchdog_loop                                               *
  *                                                                            *
- * Purpose: periodically checks availability of database and alerts admin if  *
+ * Purpose: periodically checks availability of database and alerts admins if *
  *          down                                                              *
  *                                                                            *
  * Parameters:                                                                *
@@ -175,7 +191,7 @@ static void ping_database()
  * Comments: check database availability every 60 seconds (hardcoded)         *
  *                                                                            *
  ******************************************************************************/
-void main_watchdog_loop()
+void	main_watchdog_loop()
 {
 	zabbix_log(LOG_LEVEL_DEBUG, "In main_watchdog_loop()");
 
@@ -188,7 +204,8 @@ void main_watchdog_loop()
 
 	DBclose();
 
-	for (;;) {
+	for (;;)
+	{
 		ping_database();
 
 		sleep(60);
